# taskflow-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  README_NEW.md  entrypoint.sh  pyproject.toml  requirements.txt  run.py  test.py
AI_Research/: pyproject.toml
AI_Research/github_setup/: prd.md
AI_Research/market_validation/: mv.ipynb  taskflow_market_validation.py
AI_Research/prd_generation/: PRD_toko_kita.md  task_generator_pydantic.py
AI_Research/results/: market_validation_report_20250515_001928.md  taskflow_brd_20250523_193402.md  taskflow_brd_20250523_194130.md  taskflow_brd_20250523_212623.md
app/: config.py  main.py
app/middleware/: auth.py
app/models/: __init__.py  brd.py  feedback.py  github_setup.py  market_research.py  mockup.py  prd.py  project.py  task.py  user.py
app/routes/: __init__.py
app/services/: __init__.py  brd_generator.py  config.py  github_setup.py  market_validation.py  memory_storage_service.py  models.py  (+3 more)
examples/: document_generation_flow.py  generate_brd.py  generate_github_repo.py  generate_prd.py  generate_preview.py  generate_tasks.py  run_market_validation.py  task_position_management_test.py
github_setup/: build-github-mcp.txt  repo_content_generator.py  run.py  run2.py  task_hierarchy.json
market_validation/: market_validation.ipynb  taskflow_market_validation.py
migrations/: clean_database.sql  database.sql  feedback_table.sql
mockup_generation/: brd.md  info.txt  main.py  prompt.py
prd_generation/: BRD_toko_kita.md  README.md  brd.md  brd_generation.py  prd.md  task_hierarchy.json
(+20 files in other folders)
